# Simple_calibration_using_trajectories

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
app/: calib_lidar_rtk.cpp
config/: calib.yaml
data/: calib_result.txt  gps.txt  lidar.txt  lidar_pose.txt  rtk_pose.txt
include/: hand_eye_calibrator.h
src/: hand_eye_calibrator.cpp
tests/: test_calibrator.cpp
